[gd_scene load_steps=9 format=3 uid="uid://drnjmy4w52sve"]

[ext_resource type="Script" path="res://Nodes/objetos/world_02/fall_plataform_small.gd" id="1_my20a"]
[ext_resource type="Texture2D" uid="uid://caclxls5gf03q" path="res://Sprites/Objetos/world_02/plataform_fall_small.png" id="2_2bqpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0e7h"]
size = Vector2(240, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rni1y"]
size = Vector2(242, 82)

[sub_resource type="Animation" id="Animation_1dbkg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3arha"]
resource_name = "break"
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sq4dr"]
_data = {
"RESET": SubResource("Animation_1dbkg"),
"break": SubResource("Animation_3arha")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgn1e"]
size = Vector2(229, 17)

[node name="Fall_plataform" type="AnimatableBody2D"]
script = ExtResource("1_my20a")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 40)
scale = Vector2(10, 10)
texture = ExtResource("2_2bqpx")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_m0e7h")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 65536

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3.05176e-05, 2.38419e-06)
shape = SubResource("RectangleShape2D_rni1y")
debug_color = Color(0.61356, 0.536356, 0.0854089, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sq4dr")
}

[node name="player_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
position = Vector2(0.5, -46.5)
shape = SubResource("RectangleShape2D_kgn1e")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="player_detect" to="." method="_on_player_detect_area_entered"]
